dev/manifests/3rd-party/kibana/kibana/kibana-network-policy.yml
---
# Source: xxxxx/templates/kibana/kibana-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kibana-ingress
  annotations:
    pia-team.com/role: pia.k8s.elastic/0.5.0
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 10.244.0.0/16
    ports:
    - port: 5601
      protocol: TCP
  podSelector:
    matchLabels:
      app: kibana
  policyTypes:
  - Ingress
---
# Source: xxxxx/templates/kibana/kibana-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kibana-egress
  annotations:
    pia-team.com/role: pia.k8s.elastic/0.5.0
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 10.244.0.0/16
    ports:
    - port: 53
      protocol: UDP
    - port: 9200
      protocol: TCP
  podSelector:
    matchLabels:
      app: kibana
  policyTypes:
  - Egress
